<resources>
    <string name="app_name">TripReminder</string>

    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>
    <string name="Register">Register</string>
    <string name="LOGIN">Login</string>
    <string name="ForgetPasssword">ForgetPasssword</string>
    <string name="Google">Google</string>
    <string name="TripName">Trip Name</string>
    <string name="startPoint">Start Point</string>
    <string name="endPoint">End Point</string>
    <string name="startDetails">Start Date and Time</string>
    <string name="addTrip">Add Trip</string>
    <string name="apiKey">AIzaSyCW_X5xn8RMYkRpAnZt_OEx1UAZgCpOVMM</string>
    <string name="notes">Notes</string>

    <string name="addNote">List Item</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="trip_start_point">Trip Start Point</string>
    <string name="date_picker">Date Picker</string>
    <string name="trip_time">Trip Time</string>
    <string name="time_picker">Time Picker</string>
    <string name="trip_notes">Trip Notes</string>
    <string name="trip_end_point">Trip End Point</string>
    <string name="trip_date">Trip Date</string>
    <string name="trip_name">Trip Name</string>
    <string name="cancel">Cancel</string>
    <string name="later">Later</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="starting_image">Starting Image</string>
    <string name="profile_image">Profile Image</string>
    <string name="direction_arrow">Direction Arrow</string>
    <string name="show_notes">Show Notes</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="start_point">Start Point</string>
    <string name="end_point">End Point</string>
    <string name="set_go_date">Set Go Date</string>
    <string name="set_go_time">Set Go Time</string>
    <string name="set_return_date">Set Return Date</string>
    <string name="set_return_time">Set Return Time</string>
    <string name="save">Save</string>
    <string name="type_your_note">Type Your Note</string>
    <string name="todo">TODO</string>
    <string name="save_notes">Save Notes</string>
    <string name="no_notes_for_this_trip">No Notes for this trip</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="signup">SignUp</string>
    <string name="upcoming">UpComing</string>
    <string name="history">History</string>
    <string name="other">Other</string>
    <string name="main">Main</string>
    <string name="logout">Logout</string>
    <string name="add">add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>