<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".AddNotesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/txtNote"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_7sdp"
            android:hint="@string/type_your_note"
            android:textColor="#000000"
            android:textColorHint="#D8C9C9"
            android:textColorLink="@color/teal_700" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:backgroundTint="@color/teal_700"
            android:foregroundTint="@color/white"
            android:tint="@color/white"
            app:srcCompat="@android:drawable/ic_input_add"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/todo"
            android:layout_marginBottom="@dimen/_7sdp"/>

    </LinearLayout>


    <ListView
        android:id="@+id/bubble_list_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_460sdp" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_notes"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_marginEnd="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_7sdp"
        app:backgroundTint="@color/teal_700" />

</LinearLayout>