<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#29A89C"
    tools:context=".AddAndEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_name"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:textColor="#ffffff"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/add_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:hint="@string/trip_name"
            android:textColor="#FFFFFF"
            android:textColorHint="#D8C9C9"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_point"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:textColor="#ffffff"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/add_et_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:hint="@string/start_point"
            android:textColor="#FFFFFF"
            android:textColorHint="#D8C9C9"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_point"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:textColor="#ffffff"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/add_et_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:hint="@string/end_point"
            android:textColor="#FFFFFF"
            android:textColorHint="#D8C9C9"
            android:maxLines="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:weightSum="2">

            <TextView
                android:id="@+id/add_tv_go_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:hint="@string/set_go_date"
                android:textSize="@dimen/_16ssp"
                android:textColorHint="@color/red"
                android:textColor="@color/blue"
                android:layout_weight="1"
                android:gravity="end"/>

            <TextView
                android:id="@+id/add_tv_go_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:hint="@string/set_go_time"
                android:textSize="@dimen/_16ssp"
                android:textColorHint="@color/red"
                android:textColor="@color/blue"
                android:layout_weight="1"
                android:gravity="start"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_return_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:weightSum="2">

            <TextView
                android:id="@+id/add_tv_return_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:hint="@string/set_return_date"
                android:textSize="@dimen/_16ssp"
                android:textColorHint="@color/red"
                android:textColor="@color/blue"
                android:layout_weight="1"
                android:gravity="end"/>

            <TextView
                android:id="@+id/add_tv_return_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:hint="@string/set_return_time"
                android:textSize="@dimen/_16ssp"
                android:textColorHint="@color/red"
                android:textColor="@color/blue"
                android:layout_weight="1"
                android:gravity="start"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp">

            <Spinner
                android:id="@+id/add_spinner_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"/>

            <Spinner
                android:id="@+id/add_spinner_way"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"/>
        </LinearLayout>

        <Button
            android:id="@+id/add_btn_add_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="@string/notes"
            app:backgroundTint="@color/teal_700" />

        <Button
            android:id="@+id/add_btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="@string/save"
            app:backgroundTint="@color/teal_700" />
    </LinearLayout>


</ScrollView>