<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#29A89C"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_80sdp"
            android:fontFamily="casual"
            android:text="@string/LOGIN"
            android:textColor="@color/white"
            android:textSize="@dimen/_30ssp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textColorHint="#6E6E6E"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/security"
            android:drawablePadding="@dimen/_8sdp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textColorHint="#6E6E6E"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_email" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@drawable/btn_bg"
            android:text="@string/LOGIN"
            android:textColor="@color/black"
            android:textColorLink="@color/white"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_email" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14ssp"
            android:text="@string/forget_password"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/purple_700"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_google"
            android:layout_width="@dimen/_190sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@drawable/btn_bg"
            android:text="@string/Google"
            android:textColor="@color/black"

            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>


</ScrollView>