<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="@dimen/_6sdp"
    app:cardCornerRadius="@dimen/_7sdp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9FE2BF">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_39sdp"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toEndOf="@+id/tv_date"
            app:layout_constraintTop_toTopOf="@+id/tv_date" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="@+id/tv_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_date" />

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_115sdp"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toEndOf="@+id/tv_name"
            app:layout_constraintTop_toTopOf="@+id/tv_name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_13sdp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toEndOf="@+id/iv_arrow"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <ImageView
            android:id="@+id/iv_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22sdp"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            android:src="@drawable/ic_arrow"
            android:contentDescription="@string/direction_arrow" />

        <TextView
            android:id="@+id/tv_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toStartOf="@+id/tv_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_start" />

        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_time"
            android:src="@drawable/ic_menu"
            android:contentDescription="@string/settings" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_39sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:backgroundTint="#29A89C"
            android:text="@string/start"
            android:textColor="@color/white"
            app:layout_constraintCircleRadius="@dimen/_13sdp"
            app:layout_constraintStart_toStartOf="@+id/iv_arrow"
            app:layout_constraintTop_toBottomOf="@+id/tv_destination"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <ImageView
            android:id="@+id/iv_note"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            app:layout_constraintEnd_toEndOf="@+id/iv_menu"
            app:layout_constraintTop_toTopOf="@+id/btn_start"
            android:src="@drawable/ic_note"
            android:contentDescription="@string/show_notes" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>