<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/_8sdp"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9FE2BF">

        <LinearLayout
            android:id="@+id/firstll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_14sdp"
            android:layout_marginRight="@dimen/_14sdp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tv_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_8sdp"/>

            <TextView
                android:id="@+id/tv_state2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_115sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toEndOf="@+id/tv_name2"
                app:layout_constraintTop_toTopOf="@+id/tv_name2"
                tools:ignore="TextContrastCheck" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_expand"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="@dimen/_80sdp"
            android:gravity="center"
            android:textSize="@dimen/_40ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstll" />

        <LinearLayout
            android:id="@+id/expand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_expand"
            app:layout_constraintVertical_bias="0.175">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_date2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/tv_time2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="160dp"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_arrow"
                    android:contentDescription="@string/direction_arrow" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_start2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_14ssp"
                        tools:ignore="TextContrastCheck" />


                    <TextView
                        android:id="@+id/tv_destination2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_14ssp" />

                </LinearLayout>
            </LinearLayout>


            <Button
                android:id="@+id/btn_show_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#29A89C"
                android:text="@string/show_notes"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:text="@string/delete_trip"
            app:layout_constraintTop_toBottomOf="@id/expand"
            android:backgroundTint="#29A89C"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>